src/test/deca/syntax/invalid/resultats/test41_method-synt.res
./src/test/deca/syntax/invalid/test41_method.deca:17:18: missing ';' at '}'
